--- a/cmactions/AndroidManifest.xml
+++ b/cmactions/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/device_settings_app_name"
+        android:label="Moto Actions"
         android:persistent="true">
 
         <receiver android:name="com.cyanogenmod.settings.device.BootCompletedReceiver">
@@ -41,7 +41,7 @@
 
         <activity
             android:name=".TouchscreenGesturePreferenceActivity"
-            android:label="@string/screen_gestures_panel_title"
+            android:label="Moto Actions"
             android:theme="@style/CMActions">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
