--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -460,7 +460,7 @@ on post-fs-data
     mkdir /data/data/media 0770 media media
 
     #Create folder for mm-qcamera-daemon
-    mkdir /data/vendor/camera 0770 media camera
+    mkdir /data/vendor/camera 0770 camera camera
 
     #Create PERFD deamon related dirs
     mkdir /data/system/perfd 0770 root system
