--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -460,7 +460,7 @@ on post-fs-data
     mkdir /data/data/media 0770 media media
 
     #Create folder for mm-qcamera-daemon
-    mkdir /data/camera 0770 media camera
+    mkdir /data/vendor/camera 0770 media camera
 
     #Create PERFD deamon related dirs
     mkdir /data/system/perfd 0770 root system
@@ -564,7 +564,7 @@ on post-fs-data
     mkdir /data/.fps 0770 system fingerp
 
     # Imager tuning data for camera subsystem
-    mkdir /data/misc/imager 0770 camera camera
+    mkdir /data/vendor/misc/imager 0770 camera camera
 
     setprop vold.post_fs_data_done 1
 
