--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -1,21 +1,18 @@
 #gps_conf_from_sim.conf
 
-#XTRA_SERVER_1=http://xtrapath2.izatcloud.net/xtra2.bin
-#XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
-#XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
+#XTRA_SERVER_1=https://xtrapath2.izatcloud.net/xtra2.bin
+#XTRA_SERVER_2=https://xtrapath2.izatcloud.net/xtra2.bin
+#XTRA_SERVER_3=https://xtrapath3.izatcloud.net/xtra2.bin
 
 # _SET = 1
 # _CLEAR = 0
 ERR_ESTIMATE=0
 
-#Test
-#NTP_SERVER=time.gpsonextra.net
-#Asia
-# NTP_SERVER=asia.pool.ntp.org
-#Europe
-# NTP_SERVER=europe.pool.ntp.org
-#North America
-#NTP_SERVER=north-america.pool.ntp.org
+#NTP server
+NTP_SERVER=time.izatcloud.net
+
+#XTRA CA path
+XTRA_CA_PATH=/system/etc/security/cacerts
 
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
@@ -26,10 +23,15 @@ DEBUG_LEVEL = 2
 #INTERMEDIATE_POS=0
 
 # supl version 1.0
-#5UPL_VER=0x20000
+#SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
 #SUPL_ES=0
+
+#Choose PDN for Emergency SUPL
+#1 - Use emergency PDN
+#0 - Use regular SUPL PDN for Emergency SUPL
+#USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
 
 # SUPL Mode (0=Standalone, 1=MSB, 2=MSA)
 #SUPL_MODE=1
@@ -40,8 +42,9 @@ DEBUG_LEVEL = 2
 # MSA = 0x04
 # ON_DEMAND_TIME = 0x10
 # GEOFENCE = 0x20
-# default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING | GEOFENCE
-CAPABILITIES=0x37
+# MEASUREMENTS = 0x40
+# default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING | GEOFENCE | MEASUREMENTS
+CAPABILITIES=0x77
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
@@ -64,8 +67,17 @@ CAPABILITIES=0x37
 ####################################
 # 0: Enable RRLP on LTE(Default)
 # 1: Enable LPP_User_Plane on LTE
-# 2: Enable LPP_Control_Plane
+# 2: Enable CP LPP, UP RRLP
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
+# 4: Enable CP LPP and LPPe DBH, UP RRLP (TMO)
+# 5: Enable CP & UP - LPP and LPPe DBH (VzW)
+# 6: Enable CP LPP and LPPe DBH, LPPe WLAN, UP RRLP (TMO)
+# 7: Enable CP & UP - LPP and LPPe DBH, LPPe WLAN (VzW)
+# 8: Enable CP LPP and LPPe DBH, LPPe WLAN, LPPe UBP, UP RRLP (TMO)
+# 9: Enable CP & UP - LPP and LPPe DBH, LPPe WLAN, LPPe UBP(VzW)
+# 10: Enable CP LPP and LPPe DBH, UP LPP - disable UP LPPe(AT&T )
+# 11: Enable CP LPP and LPPe DBH/WLAN, UP LPP - disable UP LPPe (AT&T)
+# 12: Enable CP LPP and LPPe DBH/WLAN/UBP, UP LPP - disable UP LPPe (AT&T)
 #LPP_PROFILE = 0
 
 ################################
@@ -83,3 +95,73 @@ CAPABILITIES=0x37
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
 #A_GLONASS_POS_PROTOCOL_SELECT = 0
+
+##################################################
+# Select technology for LPPe Control Plane
+##################################################
+# 0x1: DBH for LPPe CP
+# 0x2: WLAN AP Measurements for LPPe CP
+#LPPE_CP_TECHNOLOGY = 0
+
+##################################################
+# Select technology for LPPe User Plane
+##################################################
+# 0x1: DBH for LPPe UP
+# 0x2: WLAN AP Measurements for LPPe UP
+#LPPE_UP_TECHNOLOGY = 0
+
+##################################################
+# AGPS_CONFIG_INJECT
+##################################################
+# enable/disable injection of AGPS configurations:
+#     SUPL_VER
+#     SUPL_HOST
+#     SUPL_PORT
+#     C2K_HOST
+#     C2K_PORT
+#     LPP_PROFILE
+#     A_GLONASS_POS_PROTOCOL_SELECT
+# 0: disable
+# 1: enable
+#AGPS_CONFIG_INJECT = 1
+# AP Coarse Timestamp Uncertainty
+##################################################
+# default : 10
+# or as per clock uncertainty of product
+#AP_TIMESTAMP_UNCERTAINTY = 10
+
+#####################################
+# GNSS PPS settings
+#####################################
+#AP DR engine availability status
+# 0 : NO AP DR (default)
+# 1 : AP DR enabled
+#EXTERNAL_DR_ENABLED = 0
+
+#####################################
+#DR_SYNC Pulse Availability
+#####################################
+# 0 : DR_SYNC pulse not available (default)
+# 1 : DR_SYNC pulse available
+#DR_SYNC_ENABLED = 0
+
+#####################################
+#PPS Device name
+#####################################
+#PPS_DEVICENAME = /dev/pps0
+
+#####################################
+#AP Clock Accuracy
+#####################################
+#AP_CLOCK_PPM = 100
+
+#####################################
+#MAX ms difference to detect missing pulse
+#####################################
+#MISSING_PULSE_TIME_DELTA = 900
+
+#####################################
+#Propagation time uncertainty
+#####################################
+#PROPAGATION_TIME_UNCERTAINTY = 1
+
