--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -9,10 +9,18 @@ IZAT_DEBUG_LEVEL = 2
 ##################################################
 WIFI_WAIT_TIMEOUT_SELECT = 0
 
+##################################################
+# Time interval of injecting SRN scan data to modem
+# time in seconds.
+# Note: recommended value is between 1-5 sec
+##################################################
+LPPE_SRN_DATA_SCAN_INJECT_TIME=2
+
 ################################
 # NLP Settings
 ################################
 # NLP_MODE  1: GNP Only, 2: QNP Only, 3: Combo
+# For Automotive products, please use NLP_MODE = 4 only.
 # NLP_TOLERANCE_TIME_FIRST: Time in ms used in Combo mode
 # to determine how much Tolerance for first position
 # NLP_TOLERANCE_TIME_AFTER: Time in ms used in Combo mode
@@ -28,14 +36,30 @@ WIFI_WAIT_TIMEOUT_SELECT = 0
 # still return ZPP locations or injected locations even
 # without EULA consent, but the uncertainty can be high.
 NLP_MODE = 1
+NPL_MODE_EMERGENCY = 2
 NLP_TOLERANCE_TIME_FIRST = 5000
 NLP_TOLERANCE_TIME_AFTER = 20000
 NLP_THRESHOLD = 3
 NLP_ACCURACY_MULTIPLE = 2
 NLP_COMBO_MODE_USES_QNP_WITH_NO_EULA_CONSENT = 1
 
+#########################################
+# NLP PACKAGE AND ACTION SETTINGS
+#########################################
+# OSNLP_PACKAGE/OSNLP_ACTION: name/action of default NLP package
+OSNLP_PACKAGE = com.google.android.gms
+OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
+# REGION_OSNLP_PACKAGE/REGION_OSNLP_ACTION:
+# These two values will be used as alternative
+# for particular region where default NLP is not functional.
+#REGION_OSNLP_PACKAGE = com.baidu.map.location
+#REGION_OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
+
 # Threshold period for ZPP triggers
-ZPP_TRIGGER_THRESHOLD=2147483647
+ZPP_TRIGGER_THRESHOLD=60000
+# Accuracy threshold for ZPP positions
+# less accurate positions are ignored
+ZPP_ACCURACY_THRESHOLD=20000
 
 ###################################
 # GEOFENCE SERVICES
@@ -50,6 +74,18 @@ ZPP_TRIGGER_THRESHOLD=2147483647
 # 2: MEDIUM responsiveness
 # 3: HIGH responsiveness
 GEOFENCE_SERVICES_RESPONSIVENESS_OVERRIDE = 0
+
+#####################################
+#GTP Opt-In app
+#####################################
+
+#GTP privacy policy version url
+#https support is required
+GTP_PRIVACY_VERSION_URL = https://info.izatcloud.net/privacy/version.html
+
+#GTP privacy policy version download retry interval
+#unit is second. default is 86400
+GTP_PRIVACY_RETRY_INTERVAL = 86400
 
 #####################################
 # IZAT PREMIUM FEATURE SETTINGS
@@ -67,12 +103,12 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
-GTP_CELL=DISABLED
+GTP_CELL=BASIC
 
 #GTP_WIFI valid modes:
 # DISABLED
 # BASIC
-GTP_WIFI=DISABLED
+GTP_WIFI=BASIC
 
 #GTP_WAA valid modes:
 # DISABLED
@@ -93,17 +129,17 @@ ODCPI=BASIC
 #FREE_WIFI_SCAN_INJECT valid modes:
 #DISABLED
 #BASIC
-FREE_WIFI_SCAN_INJECT=DISABLED
+FREE_WIFI_SCAN_INJECT=BASIC
 
 #SUPL_WIFI valid modes:
 #DISABLED
 #BASIC
-SUPL_WIFI=DISABLED
+SUPL_WIFI=BASIC
 
 #WIFI_SUPPLICANT_INFO valid modes:
 #DISABLED
 #BASIC
-WIFI_SUPPLICANT_INFO=DISABLED
+WIFI_SUPPLICANT_INFO=BASIC
 
 #####################################
 # Location process launcher settings
@@ -112,6 +148,9 @@ WIFI_SUPPLICANT_INFO=DISABLED
 #Values for PROCESS_STATE:
 # ENABLED
 # DISABLED
+
+#PROCESS_NAME
+# Name of the executable file.
 
 #FEATURE MASKS:
 # GTP-WIFI    0X03
@@ -126,71 +165,109 @@ WIFI_SUPPLICANT_INFO=DISABLED
 
 #Values for PLATFORMS can be:
 #1. Any valid values obtained from ro.board.platform separated by single space. For example: msm8960 msm8226
-#2. all -> for All platforms
+#2. 'all' or 'all exclude' -> for All platforms
+#3. 'all exclude XXXX' -> All platforms exclude XXXX. For example: all exclude msm8937
 
 #Values for BASEBAND can be:
 #1. Any valid values obtained from ro.baseband separated by single space. For example: sglte sglte2
-#2. all -> for all basebands
-
-#Valyes for LEAN_TARGETS can be:
-#ENABLED  -> if this process is supposed to run on lean and mean targets
-#DISABLED -> if this process is to be disabled on lean and mean targets
-PROCESS_NAME=/system/bin/garden_app
-PROCESS_ARGUMENT=-u 0 -q 0 -j 0 -g 0 -l 0 -Z 0 -T 1
+#2. 'all' or 'all exclude' -> for all basebands
+#3. 'all exclude XXXX' -> All basebands exclude XXXX. For example: all exclude sglte
+PROCESS_NAME=DR_AP_Service
+PROCESS_ARGUMENT=
 PROCESS_STATE=DISABLED
-PROCESS_GROUPS=gps net_raw
+PROCESS_GROUPS=gps diag
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
-BASEBAND=auto
+BASEBAND=all
 LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=automotive
 
-PROCESS_NAME=/system/bin/gpsone_daemon
+#Values for LEAN_TARGETS can be:
+#ENABLED  -> if this process is supposed to run on lean and mean targets
+#DISABLED -> if this process is to be disabled on lean and mean targets
+PROCESS_NAME=garden_app
+PROCESS_ARGUMENT=-l 0 -T 1
+PROCESS_STATE=ENABLED
+PROCESS_GROUPS=gps diag
+PREMIUM_FEATURE=0
+IZAT_FEATURE_MASK=0
+PLATFORMS=all
+BASEBAND=all
+LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=automotive
+
+PROCESS_NAME=gpsone_daemon
 PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
-PROCESS_GROUPS=inet net_raw
+PROCESS_STATE=ENABLED
+PROCESS_GROUPS=inet
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=msm7630_fusion
 BASEBAND=svlte2a sglte sglte2
 LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=all
 
-PROCESS_NAME=/system/bin/lowi-server
+PROCESS_NAME=lowi-server
 PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
-PROCESS_GROUPS=gps net_admin wifi inet oem_2950 net_raw
+PROCESS_STATE=ENABLED
+PROCESS_GROUPS=gps net_admin wifi inet qcom_diag
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf303
 PLATFORMS=all
 BASEBAND=all
 LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=all
 
-PROCESS_NAME=/system/bin/xtwifi-inet-agent
+PROCESS_NAME=xtwifi-inet-agent
 PROCESS_ARGUMENT=
 PROCESS_STATE=DISABLED
 PROCESS_GROUPS=inet gps
-PREMIUM_FEATURE=1
-IZAT_FEATURE_MASK=0xc0f
-PLATFORMS=all
-BASEBAND=all
-LEAN_TARGETS=DISABLED
-
-PROCESS_NAME=/system/bin/xtwifi-client
-PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
-PROCESS_GROUPS=net_admin wifi inet gps net_raw oem_2951
-PREMIUM_FEATURE=1
+PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf0f
 PLATFORMS=all
 BASEBAND=all
 LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=all
 
-PROCESS_NAME=/system/vendor/bin/slim_daemon
+PROCESS_NAME=xtwifi-client
 PROCESS_ARGUMENT=
 PROCESS_STATE=DISABLED
-PROCESS_GROUPS=gps net_raw oem_2950
-PREMIUM_FEATURE=1
+PROCESS_GROUPS=wifi inet gps system oem_2952
+PREMIUM_FEATURE=0
+IZAT_FEATURE_MASK=0xf0f
+PLATFORMS=all
+BASEBAND=all
+LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=all
+
+PROCESS_NAME=slim_daemon
+PROCESS_ARGUMENT=
+PROCESS_STATE=DISABLED
+PROCESS_GROUPS=gps qcom_diag can
+PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf0
 PLATFORMS=all
 BASEBAND=all
 LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=all
+
+PROCESS_NAME=xtra-daemon
+PROCESS_ARGUMENT=
+PROCESS_STATE=ENABLED
+PROCESS_GROUPS=inet gps system
+PREMIUM_FEATURE=0
+IZAT_FEATURE_MASK=0
+PLATFORMS=all
+BASEBAND=all
+LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=all
+
+##################################################
+# The name of process which launches XTRA client.
+# Default process name in software which launches
+# XTRA client is system-server. Uncomment the below
+# to set the desired process which will start the
+# XTRA client.
+##################################################
+# XC20_LAUNCH_PROCESS_NAME=garden_app
